# learning_odoo

./: .env.example  CLAUDE.md  README.md  docker-compose.yml  entrypoint.sh  enunciado.md  lint.sh  odoo.conf  pyproject.toml
addons/account_banking_mandate/: README.rst  __manifest__.py
addons/account_banking_mandate_contact/: README.rst  __manifest__.py
addons/account_banking_mandate_sale/: README.rst  __manifest__.py
addons/account_banking_mandate_sale_contact/: README.rst  __manifest__.py
addons/account_banking_pain_base/: README.rst  __manifest__.py
addons/account_banking_sepa_credit_transfer/: README.rst  __manifest__.py
addons/account_banking_sepa_direct_debit/: README.rst  __manifest__.py
addons/account_check_printing_report_base/: README.rst  __manifest__.py
addons/account_due_list/: README.rst
addons/account_due_list_payment_mode/: README.rst  __manifest__.py
addons/account_invoice_select_for_payment/: README.rst  __manifest__.py
addons/account_payment_line/: README.rst
addons/account_payment_mode/: README.rst  __manifest__.py
addons/account_payment_order/: README.rst  __manifest__.py
addons/account_payment_order_grouped_output/: README.rst  __manifest__.py
addons/account_payment_order_notification/: README.rst  __manifest__.py
addons/account_payment_order_return/: README.rst  __manifest__.py
addons/account_payment_order_tier_validation/: README.rst  __manifest__.py
addons/account_payment_partner/: README.rst  __manifest__.py
addons/account_payment_promissory_note/: README.rst  __manifest__.py
(+409 files in other folders)
